# k8sfwd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cross-build.sh  k8sfwd-example.yaml  xbuild.sh
.github/workflows/: rust.yml
flatpak/: .gitignore  build-flatpak.sh  com.github.sunsided.k8sfwd.metainfo.xml  com.github.sunsided.k8sfwd.yaml  flatpak-cargo-generator.py
kind/: crashie.yaml  kind-config.yaml
src/: banner.rs  cli.rs  config.rs  kubectl.rs  main.rs  portfwd.rs  target_filter.rs
src/config/: config_id.rs  merge_with.rs  operational_config.rs  port.rs  port_forward_config.rs  port_forward_configs.rs  resource_type.rs  retry_delay.rs  tag.rs  tag_selection.rs  visit_tracker.rs
