[package]
name = "k8sfwd"
version = "0.1.0"
description = "A Kubernetes port-forwarding utility for managing multiple targets"
homepage = "https://github.com/sunsided/k8sfwd"
repository = "https://github.com/sunsided/k8sfwd"
authors = ["Markus Mayer"]
keywords = ["kubernetes", "kubectl", "cli", "port-forward", "k8s"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "EUPL-1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive", "env"] }
dotenvy = "0.15.7"
exitcode = "1.1.2"
indoc = "2.0.3"
lazy_static = "1.4.0"
pathdiff = "0.2.1"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.23"
thiserror = "1.0.43"

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = "thin"

[profile.release-lto]
inherits = "release"
strip = true
lto = "fat"
